--- a/assets/theme/parallax.css
+++ b/assets/theme/parallax.css
@@ -23,7 +23,7 @@
 .cm-etInstruction {color: #0000ff}
 
 .CodeMirror-selectedtext {color: #ffffff !important;}
-.CodeMirror-selected {background: #000080 !important;}
+.CodeMirror-selected {background: #a8a8ff !important;}
 .cm-searching {
   color: #ffff00 !important;
   background-color: #000000 !important;
@@ -53,12 +53,13 @@
 .cm-s-parallax .CodeMirror-gutters {
   border:none;
   border-right:10px solid transparent;
-  background-color:transparent;
+  background-color: transparent;
 }
 
 .cm-s-parallax .CodeMirror-linenumber {
   padding:0;
   color:#e0e2e5;
+  margin-left: 0;
 }
 
 .cm-s-parallax .CodeMirror-guttermarker { color: #1d75b3; }
